fixed vertical offset so that header no longer covers link targets, provided by @plynch

--- a/site/css/clmBook.css
+++ b/site/css/clmBook.css
@@ -268,6 +268,15 @@ div.content + div.title {
     text-align: center;
 }
 
+/* align anchored links to below the fixed navbar */
+*[id]:before {
+  display: block;
+  content: " ";
+  margin-top: -55px;
+  height: 55px;
+  visibility: hidden;
+}
+
 /* --- Sub Nav Styling --- */
 
 #nav-sub-block {
